--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Askupa Software",
-            "email": "contact@askupasoftware.com"
+            "email": "hello@askupasoftware.com"
         }
     ],
     "require": {
