--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,17 @@
             "email": "hello@askupasoftware.com"
         }
     ],
+    "support": {
+        "issues": "https://github.com/askupasoftware/amarkal-ui/issues",
+        "source": "https://github.com/askupasoftware/amarkal-ui"
+    },
     "require": {
         "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Amarkal\\UI\\": "",
+            "files": ["bootstrap.php"]
+        }
     }
 }
