--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "wordpress",
     "keywords": ["wordpress","admin","ui","form","user interface"],
     "homepage": "https://github.com/askupasoftware/amarkal-ui",
+    "license": "GPL-3.0",
     "authors": [
         {
             "name": "Askupa Software",
@@ -19,8 +20,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Amarkal\\UI\\": "",
-            "files": ["bootstrap.php"]
-        }
+            "Amarkal\\UI\\": ""
+        },
+        "files": ["bootstrap.php"]
     }
 }
