Fixed manual bootstrapping issues

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
         "psr-4": {
             "Amarkal\\UI\\": ""
         },
-        "files": ["bootstrap.php"]
+        "files": ["composer.php"]
     }
 }
