--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A set of UI components for WordPress",
     "type": "wordpress",
     "keywords": ["wordpress","admin","ui","form","user interface"],
-    "homepage": "https://github.com/askupasoftware/amarkal-ui",
+    "homepage": "https://github.com/amarkal/amarkal-ui",
     "license": "GPL-3.0",
     "authors": [
         {
@@ -12,8 +12,8 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/askupasoftware/amarkal-ui/issues",
-        "source": "https://github.com/askupasoftware/amarkal-ui"
+        "issues": "https://github.com/amarkal/amarkal-ui/issues",
+        "source": "https://github.com/amarkal/amarkal-ui"
     },
     "require": {
         "php": ">=5.3.0",
