--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/askupasoftware/amarkal-ui.git"
+    "url": "https://github.com/amarkal/amarkal-ui.git"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
